WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181609
drawElements should be invalid if vertexAttrib0 doesn't have data
https://bugs.webkit.org/show_bug.cgi?id=181609
Summary
drawElements should be invalid if vertexAttrib0 doesn't have data
Dean Jackson
Reported
2018-01-12 12:51:34 PST
drawElements should be invalid if vertexAttrib0 doesn't have data
Attachments
Patch
(4.74 KB, patch)
2018-01-12 12:55 PST
,
Dean Jackson
graouts
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2018-01-12 12:52:18 PST
<
rdar://problem/36392883
>
Dean Jackson
Comment 2
2018-01-12 12:55:32 PST
Created
attachment 331228
[details]
Patch
Dean Jackson
Comment 3
2018-01-12 13:01:19 PST
Committed
r226908
: <
https://trac.webkit.org/changeset/226908
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug