drawElements should be invalid if vertexAttrib0 doesn't have data https://bugs.webkit.org/show_bug.cgi?id=181609 <rdar://problem/36392883>

Reviewed by Antoine Quint.

Source/WebCore:

If a vertex attribute has been enabled, but no data provided, then
draw validation should fail.

Test: fast/canvas/webgl/drawElements-empty-vertex-data.html

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::validateVertexAttributes): If there were
never any data in the vertex buffer, then we incorrectly compared with 0.

LayoutTests:

* fast/canvas/webgl/drawElements-empty-vertex-data-expected.txt: Added.
* fast/canvas/webgl/drawElements-empty-vertex-data.html: Added.

Canonical link: https://commits.webkit.org/197467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226908 268f45cc-cd09-0410-ab3c-d52691b4dbfc